tests/tagged_enum_scalar_compound_bad.stderr
tests/tagged_enum_scalar_compound_bad.hop:7:6: error: HOP2036: compound literal requires an explicit aggregate type
