tests/tagged_enum_scalar_compound_bad.hop
// Verifies scalar payload variants reject compound construction.
enum Item u8 {
	Length i32
}

fn main() {
	_ = Item.Length{ value: 3 }
}
